[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaicfield"
version = "0.1.0"
description = "Multi-modal Optimal-transport Spatial Alignment via Implicit Coordinate Fields"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "POT>=0.9.5",
    "scikit-image",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/MOSAICField"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.ruff.lint.isort]
known-first-party = ["MOSAICField"]
